# AgentX-HealthCare

./: .env.example  .gitignore  Makefile  README.md  README_old.md  bayman_agentx_health.db  baymax_agentx_health.db  conversation_agent.py  conversation_example.txt  conversation_thread.py  main.py  main_gradio.py  requirements.txt
baymax-backend/: baymax_agentx_health.db  conversation_agent.py  conversation_thread.py  main.py
baymax_team_collab/: .env.example  .gitignore  baymax_agentx_health.db  conversation_agent.py  conversation_thread.py  main.py  pyproject.toml  visualize_graph.py
baymax_team_collab/medications/: medication_extraction.py  medication_state.py
baymax_team_collab/server/: service.py
baymax_team_collab/symptoms/: refresh_symptoms_table.py  symptom_extraction.py  symptom_state.py  symptom_synonyms.py  voice_symptom_pipeline.py
baymax_team_collab/test/: langgraph_thread_example.py  test_username_threading.py
baymax_team_collab/utils/: gradio_styles.py
expo-client/: README.md  app.json  package-lock.json  package.json  types.d.ts
frontend/: README.md  app.json  package-lock.json  package.json
medications/: handle_upload.py  medication_extraction.py
symptoms/: medical_knowledge.py  refresh_symptoms_table.py  symptom_extraction.py  symptom_state.py  voice_symptom_pipeline.py
test/: THREAD_ID_GUIDE.md  direct_langgraph_invoke.py  langgraph_thread_direct.py  run_symptom_tests.py  symptom_test_cases.json  test_symptom_extraction.py  test_symptom_similarity.py
utils/: __init__.py  agentic_helpers.py  display_helpers.py  medical_fact_checker.py  symptom_evaluation.py
(+60 files in other folders)
